--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Memo App",
   "name": "Simple Memo App",
-  "scope": "./",
+  "scope": "/",
   "start_url": "./",
   "display": "standalone",
   "theme_color": "#6eb5b5",
